# HelloAndroidNative

./: .gitignore  CMakeLists.txt  README.md  set-env-var.sh
android/: AndroidManifest.xml
android/res/values/: strings.xml
cmake/android/: create_apk.cmake
src/: main.cpp
